// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArrowSelector behaviour does nothing on invalid keydown on left arrow 1`] = `
<div
  class="ArrowSelector"
>
  <div
    class="ArrowSelector__main"
  >
    <button
      class="ArrowSelector__btn"
      id="arrowSelectorLeft"
    >
       &lt; 
    </button>
    <span>
      3 / 3
    </span>
    <button
      class="ArrowSelector__btn"
      id="arrowSelectorRight"
    >
       &gt; 
    </button>
  </div>
  <div
    class="ArrowSelector__label"
  >
    Current
  </div>
</div>
`;

exports[`ArrowSelector behaviour does nothing on invalid keydown on right arrow 1`] = `
<div
  class="ArrowSelector"
>
  <div
    class="ArrowSelector__main"
  >
    <button
      class="ArrowSelector__btn"
      id="arrowSelectorLeft"
    >
       &lt; 
    </button>
    <span>
      3 / 3
    </span>
    <button
      class="ArrowSelector__btn"
      id="arrowSelectorRight"
    >
       &gt; 
    </button>
  </div>
  <div
    class="ArrowSelector__label"
  >
    Current
  </div>
</div>
`;

exports[`ArrowSelector behaviour selects next if click right arrow 1`] = `
<div
  class="ArrowSelector"
>
  <div
    class="ArrowSelector__main"
  >
    <button
      class="ArrowSelector__btn"
      id="arrowSelectorLeft"
    >
       &lt; 
    </button>
    <span>
      1 / 3
    </span>
    <button
      class="ArrowSelector__btn"
      id="arrowSelectorRight"
    >
       &gt; 
    </button>
  </div>
  <div
    class="ArrowSelector__label"
  >
    Current
  </div>
</div>
`;

exports[`ArrowSelector behaviour selects next if enter press right arrow 1`] = `
<div
  class="ArrowSelector"
>
  <div
    class="ArrowSelector__main"
  >
    <button
      class="ArrowSelector__btn"
      id="arrowSelectorLeft"
    >
       &lt; 
    </button>
    <span>
      3 / 3
    </span>
    <button
      class="ArrowSelector__btn"
      id="arrowSelectorRight"
    >
       &gt; 
    </button>
  </div>
  <div
    class="ArrowSelector__label"
  >
    Current
  </div>
</div>
`;

exports[`ArrowSelector behaviour selects next if space press right arrow 1`] = `
<div
  class="ArrowSelector"
>
  <div
    class="ArrowSelector__main"
  >
    <button
      class="ArrowSelector__btn"
      id="arrowSelectorLeft"
    >
       &lt; 
    </button>
    <span>
      3 / 3
    </span>
    <button
      class="ArrowSelector__btn"
      id="arrowSelectorRight"
    >
       &gt; 
    </button>
  </div>
  <div
    class="ArrowSelector__label"
  >
    Current
  </div>
</div>
`;

exports[`ArrowSelector behaviour selects prev if click left arrow 1`] = `
<div
  class="ArrowSelector"
>
  <div
    class="ArrowSelector__main"
  >
    <button
      class="ArrowSelector__btn"
      id="arrowSelectorLeft"
    >
       &lt; 
    </button>
    <span>
      2 / 3
    </span>
    <button
      class="ArrowSelector__btn"
      id="arrowSelectorRight"
    >
       &gt; 
    </button>
  </div>
  <div
    class="ArrowSelector__label"
  >
    Current
  </div>
</div>
`;

exports[`ArrowSelector behaviour selects prev if enter press left arrow 1`] = `
<div
  class="ArrowSelector"
>
  <div
    class="ArrowSelector__main"
  >
    <button
      class="ArrowSelector__btn"
      id="arrowSelectorLeft"
    >
       &lt; 
    </button>
    <span>
      1 / 3
    </span>
    <button
      class="ArrowSelector__btn"
      id="arrowSelectorRight"
    >
       &gt; 
    </button>
  </div>
  <div
    class="ArrowSelector__label"
  >
    Current
  </div>
</div>
`;

exports[`ArrowSelector behaviour selects prev if space press left arrow 1`] = `
<div
  class="ArrowSelector"
>
  <div
    class="ArrowSelector__main"
  >
    <button
      class="ArrowSelector__btn"
      id="arrowSelectorLeft"
    >
       &lt; 
    </button>
    <span>
      1 / 3
    </span>
    <button
      class="ArrowSelector__btn"
      id="arrowSelectorRight"
    >
       &gt; 
    </button>
  </div>
  <div
    class="ArrowSelector__label"
  >
    Current
  </div>
</div>
`;

exports[`ArrowSelector rendering renders ArrowSelector 1`] = `
<div
  class="ArrowSelector"
>
  <div
    class="ArrowSelector__main"
  >
    <button
      class="ArrowSelector__btn"
      id="arrowSelectorLeft"
    >
       &lt; 
    </button>
    <span>
      1 / 3
    </span>
    <button
      class="ArrowSelector__btn"
      id="arrowSelectorRight"
    >
       &gt; 
    </button>
  </div>
  <div
    class="ArrowSelector__label"
  >
    Current
  </div>
</div>
`;
